src/styles/sass/components/AuthModal/_authModal.scss
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;


  dialog {
    position: sticky;
    display: flex;
    width: 1052px;
    height: 614px;
    justify-self: center;
    transition: all 0.3s ease;
    border-radius: 12px;
  }

  figure {
    width: 60%;
    height: 100%;
    background-color: $eerieBlack;
    display: flex;
    justify-content: center;
    align-items: baseline;
    border-top-left-radius: 12px;
    border-bottom-left-radius: 12px;

    .logo {
      position: absolute;
      width: 50px;
      height: 50px;
      left: 30px;
      top: 30px;
    }

    .mascote {
      margin-left: -50px;
      margin-top: -40px;
      width: 720px;
      height: 750px;
    }
  }

  aside {
    width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    border-radius: 12px;
    margin-left: -8px;

    background-color: $offWhite;

    padding: 35px 47px;

    .modal-title {
      font-size: 40px;
      font-weight: 600;
      font-family: $montserratFont;
      text-align: center;
      margin-bottom: 40px;
    }

    .option-container {
      display: flex;
      flex-direction: column;
      gap: 14px;
    }

    section {
      font-family: $hindFont;
      text-align: center;
    }

    section p {
      font-size: 16px;
    }

    section button {
      font-weight: bolder;
      color: $tertiaryColor;
      background-color: transparent;
      font-size: 16px;
    }

    .option-wrapper {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 16px;
      font-size: 12px;
    }

    .line {
      width: 120px;
      height: 1px;
      background-color: $eerieBlack;
    }

    .form-container {
      height: 60%;
    }
  }
}

@media (max-width: 1070px) {
  .overlay {
    dialog {
      width: 380px;
      height: 614px;
    }
  
    aside {
      width: 100%;
    }
  }
}


@media (max-width: 750px) {
  .overlay {
    background: rgba(0, 0, 0, 0.5);
  }
}

